# khazad-doom

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  REVISION_PLAN.md  package.json  reminder.md
.github/workflows/: ci.yml
.pi/memory/: .gitignore  CONTEXT.md  DECISIONS.md  PLAN.md  PROJECT.md  TIMELINE.md  VISION.md
.workflow/: AREA_CONTRACT.md  agents.toml  khazad.json
.workflow/reports/: kd-20260626-102840-44c20dda-implementation-summary.json  kd-20260626-121011-06ed0834-final-report.json  kd-20260626-125734-111aa82a-implementation-summary.json  kd-20260626-184032-7f7bc767-final-report.json  kd-20260706-210609-fcb90df0-implementation-summary.json  kd-20260706-222759-58cf471c-final-report.json  kd-20260706-230801-b54357e3-final-report.json  kd-20260707-070851-bd30eb80-final-report.json  kd-20260707-091412-a77ab877-final-report.json  kd-20260707-101926-2782be8c-implementation-summary.json  kd-20260708-011930-c21b036d-final-report.json  kd-20260708-021402-0ac6eb09-final-report.json  kd-20260708-030047-bc43bb8c-final-report.json  (+7 more)
docs/: release-audit.md  workflow-invariants.md
scripts/: install.sh  package.sh  proof-herdr-layout-v2  proof-pi-tui-worker  roadmap-truth-check  soak-runtime  validate-workflow-areas
src/: agent.rs  agent_profile.rs  artifact.rs  cli.rs  daemon.rs  domain.rs  gitutil.rs  ipc.rs  main.rs  monitor.rs  paths.rs  pi_contract.rs  pi_event_journal.rs  state.rs
tests/: confinement.rs  contract-fixtures.test.mjs  daemon_integration.rs  khazad-monitor-extension.test.mjs  khazad-worker-extension.test.mjs  skill-contract.test.mjs
(+209 files in other folders)
